fix modal position on mobile device

--- a/app/components/modal/index.styl
+++ b/app/components/modal/index.styl
@@ -103,6 +103,6 @@ $dialog-h = 450px
     height 90%
     left 0
     top 0
-    transform none
+    transform none !important
   .modal-title
    max-width 85%
