--- a/app/components/positions/index.styl
+++ b/app/components/positions/index.styl
@@ -13,7 +13,7 @@
   position relative
   font-size 1.1rem
   font-weight normal
-  text-align: left
+  text-align left
   letter-spacing 2px
   padding-left 20px
   .squre
